# test_example

./: CMakeLists.txt  build.sh  clean.sh
libpair/: CMakeLists.txt
test/: CMakeLists.txt
test/gtest/src/gtest-stamp/: download-gtest.cmake
test/testpair/: CMakeLists.txt  main.cpp  test_stonepair
